# llm-rs

./: .gitignore  fine_tuning.py  network_volume_setup.sh  pod_setup.sh  poetry.toml  prepare_voynich_dataset.py  pyproject.toml  run_fine_tuning.py
configs/: config_model.py  first_full_config.py  trial_config.py
voynich_transliterations/: GC2a-n.txt
