[project]
name = "llm-rs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "structlog",
    "pydantic",
    "pandas",
    "torch",
    "transformers",
    "datasets",
    "peft",
    "wandb"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
