[project]
name = "llm-rs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "structlog",
    "pydantic",
    "pandas",
    "torch",
    "transformers",
    "datasets",
    "peft",
    "wandb",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "protobuf (>=6.31.1,<7.0.0)",
    "bitsandbytes (>=0.47.0,<0.48.0)",
    "transformer-lens (>=2.16.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
